--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -9,10 +9,10 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  height: -webkit-fill-available;
+  // display: flex;
+  // flex-direction: column;
+  // height: 100%;
+  // height: -webkit-fill-available;
   min-width: $mobile-width;
   margin: 0;
   padding: 0;
