--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,8 @@
 @import "variables.scss";
 @import "fonts.scss";
 @import "scaffolding.scss";
+@import "blocks/page-header.scss";
+@import "blocks/menu-header.scss";
+@import "blocks/promo-header.scss";
+@import "blocks/list-rooms.scss";
+@import "blocks/list-social-text.scss";
