Добавляет блок тренажоры

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,5 @@
 @import "blocks/promo-header.scss";
 @import "blocks/list-rooms.scss";
 @import "blocks/list-social-text.scss";
+@import "blocks/page-main.scss";
+@import "blocks/training-room.scss";
