Добавляет блок абонементы. Десктоп версию. И программируемую часть

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,6 @@
 @import "blocks/list-social-text.scss";
 @import "blocks/page-main.scss";
 @import "blocks/training-room.scss";
+@import "blocks/subscription.scss";
+@import "blocks/list-tick-time.scss";
+@import "blocks/list-products.scss";
