--- a/source/sass/blocks/list-products.scss
+++ b/source/sass/blocks/list-products.scss
@@ -85,6 +85,8 @@
 }
 
 .list-products__item-price {
+  position: relative;
+
   display: flex;
   justify-content: space-between;
   margin: 89px auto 0;
@@ -93,10 +95,15 @@
 
 .list-products__price-number {
   margin-top: 12px;
+  z-index: 1;
 
   font-weight: bold;
   font-size: 60px;
   color: #103AAE;
+}
+
+.list-products__price-currency {
+  z-index: 1;
 }
 
 .list-products__item-link {
@@ -116,4 +123,85 @@
   color: #102654;
 
   border: 2px solid #102654;
+}
+
+.list-products__bg-price {
+  position: absolute;
+  top: -11px;
+  left: -18px;
+
+  font-weight: bold;
+  font-size: 100px;
+  color: #e8e8e8;
+
+  opacity: 0.48;
+}
+
+@media (max-width: $tablet-width-max) {
+  .list-products {
+    flex-direction: column;
+    margin: 0 auto;
+    min-height: 1470px;
+    padding-top: 43px;
+  }
+
+  .list-products__item {
+    width: 442px;
+    min-height: 448px;
+  }
+
+  .list-products__item-title {
+    margin-top: 61px;
+
+    line-height: 29px;
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .list-products {
+    width: 100%;
+    margin: 0;
+    min-height: 1267px;
+  }
+
+  .list-products__item {
+    width: 100%;
+    min-height: 384px;
+  }
+
+  .list-products__item-title {
+    margin-top: 39px;
+
+    font-size: 22px;
+    line-height: 110.16%;
+  }
+
+  .list-products__item-price {
+    margin: 72px auto 0;
+    width: 129px;
+  }
+
+  .list-products__price-number {
+    margin-top: 12px;
+
+    font-size: 48px;
+  }
+
+  .list-products__bg-price {
+    font-size: 80px;
+  }
+
+  .list-products__item-link {
+    margin-top: 43px;
+  }
+
+  .list-products__price-currency {
+    margin-top: 5px;
+    margin-left: 11px;
+  }
+
+  .list-products__price-currency-svg {
+    width: 24px;
+    height: 33px;
+  }
 }
