Добавляет промо блок

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,4 @@
 @import "blocks/subscription.scss";
 @import "blocks/list-tick-time.scss";
 @import "blocks/list-products.scss";
+@import "blocks/promo.scss";
