--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -24,6 +24,11 @@
   background-color: #ed0233;
 }
 
+.promo__image {
+  width: 660px;
+  height: 500px;
+}
+
 .promo__title {
   margin: 0;
   width: 240px;
@@ -185,6 +190,11 @@
     padding-bottom: 10px;
   }
 
+  .promo__image {
+    width: 386px;
+    height: 292px;
+  }
+
   .promo__title {
     width: 59%;
     margin-top: 3px;
@@ -286,5 +296,10 @@
   .promo__wrapper {
     width: 100%;
     padding: 46px 20px 10px 43px
+  }
+
+  .promo__image {
+    width: 290px;
+    height: 292px;
   }
 }
