--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,5 @@
 @import "blocks/list-tick-time.scss";
 @import "blocks/list-products.scss";
 @import "blocks/promo.scss";
+@import "blocks/trainers.scss";
+@import "blocks/list-teachers.scss";
