--- a/source/sass/blocks/promo-header.scss
+++ b/source/sass/blocks/promo-header.scss
@@ -57,6 +57,7 @@
   width: 235px;
   padding: 19px 10px;
   margin-left: 14%;
+  text-align: center;
 
   font-family: "RobotoCondensed", "Arial", sans-serif;
   font-weight: bold;
