--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -15,36 +15,11 @@
 
 .trainers__title {
   margin: 0;
+  margin-bottom: 54px;
 
   font-family: "BebasNeue", cursive;
   font-weight: bold;
   font-size: 49px;
   line-height: 49px;
   letter-spacing: 0.03em;
-}
-
-.trainers__button {
-  position: absolute;
-  top: 288px;
-
-  padding: 0;
-
-  background-color: transparent;
-  border: none;
-}
-
-.trainers__button--left {
-  left: -28px;
-
-  @media (max-width: 1290px) {
-    left: 0;
-  }
-}
-
-.trainers__button--right {
-  right: -28px;
-
-  @media (max-width: 1290px) {
-    right: 0;
-  }
 }
