--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,5 @@
 @import "blocks/trainers.scss";
 @import "blocks/list-teachers.scss";
 @import "blocks/slick.scss";
+@import "blocks/advantages.scss";
+@import "blocks/list-advantages.scss";
