--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,12 +5,12 @@
 .advantages__container {
   display: flex;
   flex-direction: column;
-  min-height: 664px;
+  min-height: 637px;
   width: 100%;
   min-width: 1024px;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0 28px;
   padding-top: 91px;
 }
 
@@ -23,3 +23,32 @@
   line-height: 49px;
   letter-spacing: 0.03em;
 }
+
+@media (max-width: $tablet-width-max) {
+  .advantages__container {
+    min-height: 637px;
+    min-width: $mobile-width;
+    max-width: 760px;
+    padding-top: 101px;
+  }
+
+  .advantages__title {
+    font-size: 42px;
+    line-height: 42px;
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .advantages__container {
+    min-width: $mobile-width;
+    // max-width: 320px;
+    padding: 0;
+    padding-top: 69px;
+  }
+
+  .advantages__title {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+
