--- a/source/sass/blocks/list-teachers.scss
+++ b/source/sass/blocks/list-teachers.scss
@@ -8,7 +8,7 @@
 
   display: flex;
   flex-direction: column-reverse;
-  min-width: 260px;
+  // min-width: 260px;
   max-width: 260px;
   min-height: 294px;
 
