--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,5 @@
 @import "blocks/slick.scss";
 @import "blocks/advantages.scss";
 @import "blocks/list-advantages.scss";
+@import "blocks/stocks.scss";
+@import "blocks/list-stocks.scss";
