--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,3 +20,4 @@
 @import "blocks/list-advantages.scss";
 @import "blocks/stocks.scss";
 @import "blocks/list-stocks.scss";
+@import "blocks/reviews.scss";
