--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,8 @@
 @import "blocks/stocks.scss";
 @import "blocks/list-stocks.scss";
 @import "blocks/reviews.scss";
+@import "blocks/contact-and-free-lernen.scss";
+@import "blocks/free-lernen.scss";
+@import "blocks/form-free-lernen.scss";
+@import "blocks/contact.scss";
+@import "blocks/list-info-contact.scss";
