Добавляет десктопную, планшетную версию подвала

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,3 +26,6 @@
 @import "blocks/form-free-lernen.scss";
 @import "blocks/contact.scss";
 @import "blocks/list-info-contact.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/menu-site.scss";
+@import "blocks/list-social.scss";
