--- a/source/sass/blocks/menu-site.scss
+++ b/source/sass/blocks/menu-site.scss
@@ -22,6 +22,10 @@
   }
 }
 
+.menu-site__item--logo {
+  display:  none;
+}
+
 @media (max-width: $tablet-width-max) {
   .menu-site {
     margin-left: 5%;
@@ -35,12 +39,23 @@
 
 @media (max-width: $mobile-width-only) {
   .menu-site {
-    flex-wrap: wrap;
-    flex-direction: column;
+    display: block;
     margin: 0;
+    column-count: 2;
+    column-gap: 32px;
+    column-fill: auto;
+  }
+
+  .menu-site__item--logo {
+    display: block;
   }
 
   .menu-site li {
     margin-left: 0;
+    margin-top: 19px;
+  }
+
+  .menu-site .menu-site__item--logo {
+    margin-top: 2px;
   }
 }
