--- a/source/sass/blocks/list-products.scss
+++ b/source/sass/blocks/list-products.scss
@@ -21,8 +21,6 @@
     border-width: 7px;
     border-image: linear-gradient(111.72deg, #ED0233 17.6%, #003EB7 95.31%);
     border-image-slice: 1;
-
-    cursor: pointer;
   }
 
   &:hover h3 {
@@ -123,6 +121,10 @@
   color: #102654;
 
   border: 2px solid #102654;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .list-products__bg-price {
