--- a/source/sass/blocks/training-room.scss
+++ b/source/sass/blocks/training-room.scss
@@ -176,7 +176,7 @@
 
   .training-room__wrapper {
     min-width: $mobile-width;
-    max-width: 320px;
+    // max-width: 320px;
     margin: 0 auto;
     padding: 0 15px;
   }
@@ -204,6 +204,7 @@
   .training-room__wrapper-image--one {
     min-width: $mobile-width;
     max-width: 320px;
+    // margin: 0;
     margin: 0 auto;
     margin-top: 33px;
     padding: 0;
