--- a/source/sass/blocks/training-room.scss
+++ b/source/sass/blocks/training-room.scss
@@ -48,6 +48,8 @@
 .training-room__image {
   margin-left: 5.5%;
   margin-top: 1px;
+
+  background-color: #eff4ff;
 }
 
 .training-room__image--two {
