--- a/source/sass/blocks/list-teachers.scss
+++ b/source/sass/blocks/list-teachers.scss
@@ -19,6 +19,8 @@
     flex-direction: column;
     cursor: pointer;
 
+    box-shadow: 0px 0px 35px rgba(42, 59, 99, 0.17);
+
     &::after {
       content: "";
 
