--- a/source/sass/blocks/stocks.scss
+++ b/source/sass/blocks/stocks.scss
@@ -149,7 +149,7 @@
 
   .stocks__container {
     min-width: $mobile-width;
-    max-width: 320px;
+    // max-width: 320px;
     padding: 0 15px;
     padding-top: 68px;
   }
@@ -175,7 +175,7 @@
       top: auto;
       bottom: 0;
 
-      width: 290px;
+      width: 100%;
       height: 299px;
 
       background-image: url("../img/girl-foto-small.png");
