--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -143,7 +143,7 @@
 @media (max-width: $mobile-width-only) {
   .reviews__container {
     min-width: $mobile-width;
-    max-width: 320px;
+    // max-width: 320px;
     padding: 0 47px;
     min-height: 480px;
   }
@@ -158,13 +158,30 @@
   .reviews .slick-slide {
     display: flex;
     flex-direction: column;
-    width: 226px;
+    min-width: 226px;
+    max-width: 100%;
     min-height: 335px;
-    padding: 49px 0 30px 0;
+    padding: 49px 22px 30px 22px;
 
     &::before {
-      left: 41px;
-      top: 40px;
+      display: none;
+    }
+  }
+
+  .reviews__item-name {
+    position: relative;
+
+    width: 65px;
+    margin-left: 55%;
+
+    line-height: 130%;
+
+    &::before {
+      content: "";
+
+      position: absolute;
+      left: -83px;
+      top: -9px;
 
       width: 68px;
       height: 68px;
@@ -173,16 +190,11 @@
     }
   }
 
-  .reviews__item-name {
-    width: 65px;
-    margin-left: 56%;
-
-    line-height: 130%;
-  }
-
   .reviews__item-description {
     margin: 0 auto;
-    width: 180px;
+    // width: 180px;
+    min-width: 180px;
+    width: 100%;
     margin-top: 22px;
 
     text-align: center;
