--- a/source/sass/blocks/stocks.scss
+++ b/source/sass/blocks/stocks.scss
@@ -171,11 +171,26 @@
     padding-bottom: 346px;
     min-height: 598px;
 
-    &::after {
-      top: auto;
+    &:before {
+      content: "";
+
+      position: absolute;
+      right: 0;
       bottom: 0;
 
       width: 100%;
+      height: 299px;
+
+      background-image: url("../img/girl-foto-small-bg.png");
+    }
+
+    &::after {
+      top: auto;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
+
+      width: 290px;
       height: 299px;
 
       background-image: url("../img/girl-foto-small.png");
