--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -61,6 +61,7 @@
     min-width: $mobile-width;
     // max-width: 320px;
     padding: 2px 31px 0;
+    padding-bottom: 70px;
   }
 
   .trainers .slick-slider {
