--- a/source/sass/blocks/list-teachers.scss
+++ b/source/sass/blocks/list-teachers.scss
@@ -163,6 +163,10 @@
   }
 }
 
+.list-teachers__img-bg {
+  display: none;
+}
+
 @media (max-width: $tablet-width-max) {
   .list-teachers .slick-slide {
     min-width: 268px;
@@ -187,16 +191,19 @@
 @media (max-width: $mobile-width-only) {
   .list-teachers .slick-slide {
     min-width: 226px;
-    // max-width: 226px;
     max-width: 100%;
     min-height: 274px;
 
-    background-size: auto;
-    background-position: 50% 0;
+    background-image: none;
+    // background-size: cover;
+    // background-position: 50% 0;
 
     &:hover {
       .list-teachers__item-title {
-        margin-top: 46px;
+        // margin-top: 46px;
+        margin: 0;
+        top: 46px;
+        bottom: auto;
       }
 
       .list-teachers__item-info {
@@ -209,8 +216,35 @@
     }
   }
 
+  .list-teachers__item-title {
+    position: absolute;
+    bottom: 25px;
+    left: 50%;
+
+    z-index: 1;
+    margin: 0;
+
+    transform: translate(-50%, 0);
+  }
+
+  .list-teachers__item-hover {
+    position: absolute;
+    top: 74px;
+    left: 50%;
+
+    z-index: 1;
+
+    transform: translate(-50%, 0);
+  }
+
+  .list-teachers__img-bg {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
   .list-teachers .slick-arrow {
-    top: 207px;
+    top: 50%;
 
     width: 10px;
     height: 19px;
