--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -60,8 +60,7 @@
   .trainers__container {
     min-width: $mobile-width;
     // max-width: 320px;
-    padding: 2px 31px 0;
-    padding-bottom: 70px;
+    padding: 2px 47px 70px;
   }
 
   .trainers .slick-slider {
